src/test/ui/hygiene/intercrate.stderr
error: type `fn() -> u32 {foo::bar::f}` is private
  --> $DIR/intercrate.rs:10:16
   |
LL |     assert_eq!(intercrate::foo::m!(), 1);
   |                ^^^^^^^^^^^^^^^^^^^^^ private type
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

